# humdroid

./: .gitignore  .gitmodules  README.md  adbAPI.bash  pyproject.toml  scrcpyScript.py  screenshot.bash  screenshot.py
humdroid/: __init__.py  testTransmitter.py
humdroid/IPC/: CVRequester.py  CVServer.py  IPCSocket.py  __init__.py
humdroid/wrappers/: ScrcpyWrapper.py  __init__.py
opencv/: CMakeLists.txt  compile.bash  cpu.cpp  gpu.cpp  install.bash
opencv/IPC/: IPC.c  IPC.cpp  IPCInputMsg.hpp  IPCMsgQueue.hpp  IPCOutputMsg.hpp  IPCSocket.cpp  IPCSocket.h  IPCSocketTest.cpp  IPCThread.hpp  Messages.hpp  transmitterTest.c  transmitterTest.cpp
opencv/opencv_wrapper/: Match.hpp  TemplateCPU.hpp  TemplateGPU.hpp  TemplateMatch.hpp  TemplateMatchCPU.hpp  TemplateMatchGPU.hpp
opencv/util/: MutexQueue.hpp
scrcpy/: IPC.py  scrcpyScript.py  testTransmitter.py
scrcpy/IPC/: CVRequester.py  IPCSocket.py  __init__.py
